--- a/disablecopy.html
+++ b/disablecopy.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copy Restriction</title>
+    <title>No Copy</title>
     <style>
         body {
             user-select: none; /* Disable text selection */
