--- a/Resume.htm
+++ b/Resume.htm
@@ -161,12 +161,12 @@
                   <h4 class="project-title">Spreading awareness on Govt policies</h4>
                   <p class="project-description">
                     As a team, we met many farmers and got to know about their problems. Accordingly, we had suggested them a few Govt. policies that would be beneficial. A farmer showed real interest and now he is implementing it.
-                  </p>
+                  <!-- </p>
                   <h4 class="project-title">Travel Assistance</h4>
                   <p class="project-description">
                     Provide travel information to tourists, guests, and visitors. Provide information to tourists on historical sites and sightseeing. Plan and organize tourist itineraries for tourists and visitors.
                   </p>
-                  <h4 class="project-title">InsurePoint</h4>
+                  <h4 class="project-title">InsurePoint</h4> -->
                   <p class="project-description">
                     It is a point destination for all insurances that are primarily important that includes Health, Term, Property, Vehicle. Where, the user can start insurance and also claim if required
                   </p>
